--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-775.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林), server: 213.183.53.202, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇨🇳 中国-285.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-632.7KB/s(Youtube:不良林), server: 149.202.82.172, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-1.22MB/s(Youtube:不良林), server: 149.202.82.172, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇫🇷 法国-342.2KB/s(Youtube:不良林), server: 149.202.82.172, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-664.3KB/s(Youtube:不良林), server: 149.202.82.172, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-349.0KB/s(Youtube:不良林), server: 149.202.82.172, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-371.0KB/s(Youtube:不良林), server: 149.202.82.172, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-849.8KB/s(Youtube:不良林), server: 149.202.82.172, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇫🇷 法国-278.7KB/s(Youtube:不良林), server: 149.202.82.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-401.9KB/s(Youtube:不良林), server: 149.202.82.172, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-284.2KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-775.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-377.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
