--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-632.7KB/s(Youtube:不良林), server: 149.202.82.172, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇫🇷 法国-1.22MB/s(Youtube:不良林), server: 149.202.82.172, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇫🇷 法国-342.2KB/s(Youtube:不良林), server: 149.202.82.172, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-664.3KB/s(Youtube:不良林), server: 149.202.82.172, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-349.0KB/s(Youtube:不良林), server: 149.202.82.172, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-371.0KB/s(Youtube:不良林), server: 149.202.82.172, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-849.8KB/s(Youtube:不良林), server: 149.202.82.172, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇫🇷 法国-278.7KB/s(Youtube:不良林), server: 149.202.82.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-401.9KB/s(Youtube:不良林), server: 149.202.82.172, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-284.2KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-239.4KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-348.8KB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.70MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: rr006.zhuan666.top, port: 11206, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.253, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇺🇸 美国-5.82MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇨🇳 中国-921.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-632.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-664.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-849.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-278.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-401.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
