--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-239.4KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-348.8KB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.70MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: rr006.zhuan666.top, port: 11206, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
-  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.253, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇺🇸 美国-5.82MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇨🇳 中国-921.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-461.1KB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林), server: 213.183.53.207, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇸🇬 新加坡-595.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.62MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-239.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-921.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
