--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-461.1KB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林), server: 213.183.53.207, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇸🇬 新加坡-595.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.62MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-566.0KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.39MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-354.1KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.91MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-461.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-322.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-595.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-561.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-354.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-354.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
